--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,8 @@
         "baseUrl": "src",
         "paths": {
             "@code/*": [
-                "day4/*"
+                "day1/*",
+                "day2/*"
             ]
         }
     },
